...
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".activities.MealPlanAddEditViewActivity">

    <LinearLayout
        android:id="@+id/mealPlanTitleLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:orientation="horizontal"
        android:background="@color/white"
...
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Meal Plan Day:"
            android:textColor="@color/purple_200"/>

        <EditText
            android:id="@+id/editTextMealPlanTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:text=""
            android:textColor="@color/white"/>
...
                            android:layout_height="wrap_content"
                            android:paddingEnd="16dp"
                            android:text="Breakfast"
                            android:textColor="@color/purple_200"/>

                        <Button
                            android:id="@+id/add_breakfast_recipe"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:clickable="true"
                            android:text="Add Recipe"
                            android:textColor="@color/white" />

                        <Button
                            android:id="@+id/add_breakfast_ingredient"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="10dp"
                            android:layout_weight="1"
                            android:clickable="true"
                            android:text="Add Ingredient"
                            android:textColor="@color/white" />
                    </LinearLayout>

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/breakfast_meals"
                        android:layout_width="match_parent"
...
        android:text="@string/cancel"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/add_button"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="20dp"
        android:backgroundTint="@color/confirm"
        android:onClick="confirm"
...
